# trezor_PC_monitor

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  UPSTREAM_TREZOR_REF
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  firmware.yml  release.yml
app/: fonts.qrc
app/fonts/: spleen-5x8.bdf  spleen-6x12.bdf  spleen-8x16.bdf
app/src/: actionexecutor.cpp  actionexecutor.h  designcanvas.cpp  designcanvas.h  deviceconnection.cpp  deviceconnection.h  firmwareupdater.cpp  firmwareupdater.h  fpsscaler.cpp  fpsscaler.h  i18n.cpp  i18n.h  iconeditor.cpp  iconeditor.h  main.cpp  mainwindow.cpp  mainwindow.h  metriccodec.cpp  metriccodec.h  nvmlprovider.cpp  nvmlprovider.h  packcompiler.cpp  packcompiler.h  pixelfont.cpp  pixelfont.h  presentmon_compat.h  presentmonprovider.cpp  presentmonprovider.h  projectmodel.cpp  projectmodel.h  resourceimporter.cpp  resourceimporter.h  resourcepreview.cpp  resourcepreview.h  telemetry.cpp  telemetry.h  xptheme.cpp  xptheme.h  zipstore.cpp  zipstore.h
app/tests/: firmware_stubs.c  pcmonitor_tests.cpp  supervise.h
app/windows/: pcmonitor.rc
docs/: ARCHITECTURE.md  BUILDING.md  FIRMWARE.md  PROTOCOL.md  README_RU.md  release-notes-v0.1.0.md  release-notes-v0.2.0.md  release-notes-v0.2.1.md
firmware/: Makefile  main.c  monitor.c  monitor.h  renderer.c  renderer.h
firmware/prebuilt/: SHA256SUMS.txt
protocol/: protocol.c  protocol.h
scripts/: build-firmware.sh  build-windows.ps1  generate-icon.ps1  package-portable.ps1
